# InputShareBT

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bluetooth.cpp  bluetooth.h  bt.cpp  btstack_config.h  hid.cpp  hid.h  hook.cpp  inputhook.cpp  inputhook.h  keys.h  main.cpp  resources.qrc
libs/: CMakeLists.txt
